--- a/src/global.css
+++ b/src/global.css
@@ -12,3 +12,14 @@ button {
 input {
   outline: none;
 }
+
+.Link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.Link:hover {
+  text-decoration: none;
+  color: orange;
+}
